# labolabo

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  Package.swift  README.md  release-please-config.json
rust/: Cargo.toml  README.md  RELEASE_NOTES_TEMPLATE.md
rust/.cargo/: config.toml
rust/crates/labolabo-app/: Cargo.toml  README.md  build.rs
rust/crates/labolabo-app/fixtures/ghostty_config/basic/: config
rust/crates/labolabo-app/fixtures/ghostty_config/bom/: config
rust/crates/labolabo-app/fixtures/ghostty_config/colors_basic/: config
rust/crates/labolabo-app/fixtures/ghostty_config/colors_theme_absolute/: external_theme
rust/crates/labolabo-app/fixtures/ghostty_config/colors_theme_missing/: config
rust/crates/labolabo-app/fixtures/ghostty_config/cycle/: a.conf  b.conf
rust/crates/labolabo-app/fixtures/ghostty_config/empty_include/: config
rust/crates/labolabo-app/fixtures/ghostty_config/include_after_roots/: late.conf  root_a
rust/crates/labolabo-app/fixtures/ghostty_config/include_tree/: config
rust/crates/labolabo-app/fixtures/ghostty_config/missing_required/: config
rust/crates/labolabo-app/fixtures/ghostty_config/tilde/: config
rust/crates/labolabo-app/fixtures/ghostty_config/two_roots/: app_support_config  xdg_config
rust/crates/labolabo-app/locales/: en.yml  ja.yml
rust/crates/labolabo-app/src/: app.rs  color_picker.rs  commit_pane.rs  control.rs  empty_state.rs  focus.rs  ghostty_config.rs  git_pane.rs  grid.rs  hooks.rs  i18n.rs  icons.rs  ide_open.rs  ime.rs  import_prompt.rs  keys.rs  main.rs  menus.rs  missing_dir.rs  motion.rs  mouse_report.rs  new_task.rs  osc52_log.rs  paste.rs  path_abbrev.rs  pr_status.rs  render.rs  selection.rs  settings.rs  sidebar.rs  swift_import.rs  task_lifecycle.rs  task_menu.rs  task_workspace.rs  text_field.rs  theme.rs  titlebar.rs  update_check.rs  window_bounds.rs
rust/crates/labolabo-app/tests/: control_cli.rs  i18n_parity.rs
rust/crates/labolabo-core/: Cargo.toml
rust/crates/labolabo-core/fixtures/: generate.swift
rust/crates/labolabo-core/fixtures/expected/agent_event/: full_event.json  optional_fields_absent.json  unknown_fields_ignored.json
rust/crates/labolabo-core/fixtures/expected/diff/: binary_file.json  deleted_file.json  modified_file_hunk_and_line_numbers.json  multiple_files.json  multiple_hunks_single_file.json  new_file.json  no_newline_at_eof.json  quirk_dash_dash_dash_deletion_line.json  realrepo_cached_mixed_new_binary_modify_delete_rename.json  realrepo_unstaged_modify.json  rename_with_hunk.json
rust/crates/labolabo-core/fixtures/expected/porcelain/: branch_headers_ahead_behind.json  clean_repo_not_dirty.json  copy_entry.json  detached_head.json  empty_input.json  ignored_entries.json  malformed_ordinary_dropped.json  ordinary_staged_unstaged_path_with_space.json  realrepo_ahead_behind_upstream.json  realrepo_mixed_staged_unstaged_untracked_ignored.json  realrepo_unmerged_conflict.json  rename_consumes_original_path_token.json  unknown_marker_skipped.json  unmerged_conflict.json
rust/crates/labolabo-core/fixtures/expected/transcript_usage/: bool_bridges_to_int_quirk.json  empty_input.json  fractional_float_and_string_fall_back_to_zero.json  ignores_non_assistant_and_malformed.json  missing_usage_fields_default_to_zero.json  model_overwritten_by_latest_nonempty_turn.json  sums_across_assistant_turns.json  whole_number_float_bridges_to_int.json
rust/crates/labolabo-core/fixtures/expected/worktree/: bare_repository.json  three_blocks.json  trailing_blank_line.json  unknown_and_locked_reason_lines_ignored.json
rust/crates/labolabo-core/fixtures/inputs/agent_event/: full_event.txt  non_string_field_ignored.txt  optional_fields_absent.txt  unknown_fields_ignored.txt  unknown_hook_event_dropped.txt
rust/crates/labolabo-core/fixtures/inputs/diff/: binary_file.diff  deleted_file.diff  modified_file_hunk_and_line_numbers.diff  multiple_files.diff  multiple_hunks_single_file.diff  new_file.diff  no_newline_at_eof.diff  quirk_dash_dash_dash_deletion_line.diff  realrepo_cached_mixed_new_binary_modify_delete_rename.diff  realrepo_unstaged_modify.diff  rename_with_hunk.diff
rust/crates/labolabo-core/fixtures/inputs/porcelain/: branch_headers_ahead_behind.txt  clean_repo_not_dirty.txt  copy_entry.txt  detached_head.txt  ignored_entries.txt  initial_commit_no_oid.txt  malformed_ordinary_dropped.txt  ordinary_staged_unstaged_path_with_space.txt  realrepo_ahead_behind_upstream.raw  realrepo_mixed_staged_unstaged_untracked_ignored.raw  realrepo_unmerged_conflict.raw  rename_consumes_original_path_token.txt  unknown_marker_skipped.txt  unmerged_conflict.txt
rust/crates/labolabo-core/fixtures/inputs/worktree/: three_blocks.txt  (+3 more)
rust/crates/labolabo-core/fixtures/store/: fixture.db
rust/crates/labolabo-core/fixtures/tiling/: legacy_old_format.json  nested_split.json  single_leaf.json  single_leaf_with_agent_session.json  tab_group.json  unicode_and_special_chars.json
rust/crates/labolabo-core/src/: agent_event_parser.rs  agent_status.rs  branch_naming.rs  commit_graph.rs  control.rs  control_protocol.rs  cross_session_conflicts.rs  file_watcher.rs  git_engine.rs  git_models.rs  git_runner.rs  hook_settings.rs  hooks.rs  lib.rs  porcelain.rs  process.rs  release_version.rs  task_order.rs  tiling.rs  tool_locator.rs  transcript_usage.rs  unified_diff.rs  util.rs  windows_pipe_security.rs  worktree.rs
rust/crates/labolabo-core/src/store/: agent_bindings.rs  data_dir.rs  database.rs  datetime.rs  error.rs  mod.rs  persisting.rs  record.rs  swift_import.rs  task_database.rs  task_record.rs
rust/crates/labolabo-core/tests/: golden.rs  labolabo_hook_bin.rs  store_golden.rs  tiling_golden.rs
rust/crates/labolabo-term/: Cargo.toml  README.md
rust/crates/labolabo-term/src/: color.rs  lib.rs  mouse.rs  osc52.rs  osc52_log.rs  session.rs  snapshot.rs
rust/crates/labolabo-term/src/backend/: alacritty.rs  ghostty.rs  mod.rs
rust/crates/labolabo-term/tests/: backend_common.rs  windows_spawn.rs
rust/scripts/: bundle-macos.sh  package-linux.sh  package-windows.ps1
(+121 files in other folders)
