[workspace]
resolver = "2"
members = ["crates/labolabo-core", "crates/labolabo-term", "crates/labolabo-app"]
# `labolabo-app` (gpui) is deliberately excluded from the default set: a
# plain `cargo test`/`cargo build`/`cargo clippy` at the workspace root must
# not pull in gpui (a heavy desktop-UI dependency -- tri-platform as of the
# Windows app wave, but still not something the fast/light `rust` job at the
# workspace root should build), so the existing `rust` CI job's runtime
# stays what it was before wave 5a. Build labolabo-app explicitly with
# `-p labolabo-app` (see the `rust-app`/`rust-app-linux`/`rust-app-windows`
# CI jobs and `crates/labolabo-app/README.md`).
default-members = ["crates/labolabo-core", "crates/labolabo-term"]

[workspace.package]
edition = "2021"

# LOCAL PATCH (LaboLabo, W14): pin `libghostty-vt-sys` to a vendored copy
# with a one-line build.rs fix. See vendor/libghostty-vt-sys/README.md and
# vendor/libghostty-vt-sys/build.rs for the full rationale -- summary:
# upstream skips `-Dtarget` for native (non-cross) builds, so Zig
# auto-detects and bakes in the *exact* build machine's CPU features
# (confirmed via LLVM IR `target-features` dumps: native picks up things
# like AVX-512, while an explicit target triple resolves to the portable
# baseline CPU for that architecture). On GitHub Actions' heterogeneous
# runner fleet this produced intermittent `SIGILL` crashes in
# `backend_common` tests (a `.zig-cache` built by a wide-ISA runner gets
# reused, via `mlugg/setup-zig`'s cross-run cache, by a narrower one) and is
# a live risk for the Linux/macOS release bundles (native-CPU code shipped
# to end users with unknown CPUs). Drop this patch once a fix lands upstream
# (https://github.com/uzaaft/libghostty-rs).

# LOCAL PATCH (LaboLabo, W17): pin `alacritty_terminal` to a vendored copy
# with a one-line `term/mod.rs` fix. See vendor/alacritty_terminal/README.md
# for the full rationale -- summary: upstream's `push_keyboard_mode` panics
# (`Vec::remove(0)` on an empty `Vec`) once its mode stack hits 4096 pushes
# with no intervening pop, because a copy-pasted bound-check branch trims
# the wrong stack (`title_stack` instead of `keyboard_mode_stack`). This
# workspace's own `AlacrittyBackend::new` (`crates/labolabo-term/src/
# backend/alacritty.rs`) sets `kitty_keyboard: true`, which is what makes
# the buggy branch reachable at all -- unwinding the worker thread that owns
# the VT core (`labolabo-term::session::run_worker`) permanently freezes
# that pane. Drop this patch once a fix lands upstream
# (https://github.com/alacritty/alacritty).
[patch.crates-io]
libghostty-vt-sys = { path = "vendor/libghostty-vt-sys" }
alacritty_terminal = { path = "vendor/alacritty_terminal" }
