[package]
name = "labolabo-app"
version = "0.1.0"
edition.workspace = true
publish = false
description = "gpui terminal-shell binary for LaboLabo's Rust cross-platform port (wave 5b-2: tile/tab tree UI over labolabo-core::tiling, layered on labolabo-term's TermSession)."

[[bin]]
name = "labolabo-app"
path = "src/main.rs"

[features]
# Passthrough to labolabo-term's own backend features (see its README/
# Cargo.toml) so the VT backend can be switched at this crate's own `-p
# labolabo-app` command line, e.g.:
#   cargo run -p labolabo-app --no-default-features --features backend-ghostty-vt
# `default-features = false` on the dependency below means labolabo-term
# contributes no backend unless one of these is selected -- same
# default-is-alacritty, opt-in-is-ghostty shape as labolabo-term itself.
default = ["backend-alacritty"]
backend-alacritty = ["labolabo-term/backend-alacritty"]
backend-ghostty-vt = ["labolabo-term/backend-ghostty-vt"]

[dependencies]
labolabo-core = { path = "../labolabo-core" }
labolabo-term = { path = "../labolabo-term", default-features = false }
anyhow = "1"
futures = "0.3"
gpui = "0.2"

# Wave 5b-3 (Task model, `plans/012-task-model-and-control-cli.md` §1):
# `new_task::create_worktree_task` stamps today's date into the generated
# branch name (`branch_naming::generate_branch_name`), and
# `LaboLaboApp::select_task`/`persist_workspace` stamp `Task::
# last_active_at` -- both need `chrono::Utc::now()`. Version/feature set
# matches `labolabo-core`'s own `chrono` dependency to keep one resolved
# version in the workspace lockfile.
chrono = { version = "0.4.45", default-features = false, features = ["std", "clock"] }

# Wave 5c (hooks integration): `hooks::HookRuntime` mints a fresh UUID per
# spawned pane (the `LABOLABO_PANE` env value, routing hook events back to
# their pane -- see `hooks.rs`'s module doc comment) and per app-launch
# socket path. `v4` only (random IDs), matching `labolabo-core`'s own `uuid`
# dependency's feature set.
uuid = { version = "1", features = ["v4"] }

# Test-only: `hooks::tests` asserts on the merged `.claude/settings.local.json`
# content's actual JSON structure (not just substring matches), same as
# `labolabo-core`'s own `hook_settings` tests.
[dev-dependencies]
serde_json = "1"
