[package]
name = "labolabo-app"
version = "0.1.0"
edition.workspace = true
publish = false
description = "gpui terminal-shell binary for LaboLabo's Rust cross-platform port (wave 5b-2: tile/tab tree UI over labolabo-core::tiling, layered on labolabo-term's TermSession)."
# Now that this package has two bin targets (the gpui app itself, and the
# `labolabo` control CLI, see the `[[bin]]` entries below), a bare `cargo
# run -p labolabo-app` (used throughout README.md and CLAUDE.md's smoke-run
# instructions, predating the control CLI) would otherwise fail with "could
# not determine which binary to run" -- `default-run` keeps that command
# launching the app, matching every pre-existing doc/script.
default-run = "labolabo-app"

[[bin]]
name = "labolabo-app"
path = "src/main.rs"

# The control CLI (`docs/control-protocol.md`, `plans/012-task-model-and-
# control-cli.md` §2): a thin client for `labolabo-app`'s control socket
# (`src/control.rs`/`labolabo_core::control`). Deliberately a separate,
# small binary target in this same package rather than a `labolabo-core`
# `src/bin/` bin (contrast `labolabo-hook`, `labolabo-core`'s own bin
# target) -- see `src/bin/labolabo.rs`'s module doc comment for why.
[[bin]]
name = "labolabo"
path = "src/bin/labolabo.rs"

[features]
# Passthrough to labolabo-term's own backend features (see its README/
# Cargo.toml) so the VT backend can be switched at this crate's own `-p
# labolabo-app` command line, e.g.:
#   cargo run -p labolabo-app --no-default-features --features backend-ghostty-vt
# `default-features = false` on the dependency below means labolabo-term
# contributes no backend unless one of these is selected -- same
# default-is-alacritty, opt-in-is-ghostty shape as labolabo-term itself.
default = ["backend-alacritty"]
backend-alacritty = ["labolabo-term/backend-alacritty"]
backend-ghostty-vt = ["labolabo-term/backend-ghostty-vt"]

[dependencies]
labolabo-core = { path = "../labolabo-core" }
labolabo-term = { path = "../labolabo-term", default-features = false }
anyhow = "1"
futures = "0.3"
gpui = "0.2"

# Wave 5b-3 (Task model, `plans/012-task-model-and-control-cli.md` §1):
# `new_task::create_worktree_task` stamps today's date into the generated
# branch name (`branch_naming::generate_branch_name`), and
# `LaboLaboApp::select_task`/`persist_workspace` stamp `Task::
# last_active_at` -- both need `chrono::Utc::now()`. Version/feature set
# matches `labolabo-core`'s own `chrono` dependency to keep one resolved
# version in the workspace lockfile.
chrono = { version = "0.4.45", default-features = false, features = ["std", "clock"] }

# Wave 5c (hooks integration): `hooks::HookRuntime` mints a fresh UUID per
# spawned pane (the `LABOLABO_PANE` env value, routing hook events back to
# their pane -- see `hooks.rs`'s module doc comment) and per app-launch
# socket path. `v4` only (random IDs), matching `labolabo-core`'s own `uuid`
# dependency's feature set.
uuid = { version = "1", features = ["v4"] }

# Control CLI wave (`docs/control-protocol.md`): `LaboLaboApp::
# dispatch_control`'s command handlers (`app.rs`) build `ControlResponse`
# `result` payloads with `serde_json::json!`. Previously dev-dependency-only
# (`hooks::tests` asserted on merged `.claude/settings.local.json`
# structure); now needed at runtime too.
serde_json = "1"

# IME wave: `ime::layout_preedit` measures each preedit character's on-
# screen cell width (1 for narrow, 2 for wide/fullwidth -- e.g. CJK --
# characters) so the inline composition overlay lines up with the terminal
# grid it's painted over.
unicode-width = "0.2"

# i18n wave (wave 6f, `crate::i18n`): compile-time-embedded ja/en locale
# tables (`locales/{ja,en}.yml`) via the `t!()` macro (`i18n!()` invoked once
# in `main.rs`). Chosen over a hand-rolled static table because it was the
# task brief's own first candidate and its *runtime* footprint is what that
# brief actually gates on ("実行時コストほぼゼロ・アイドル電力に影響しない
# こと"): `t!()` is one atomic-string read (`rust_i18n::locale()`) plus a
# `BTreeMap` lookup baked in at compile time via `rust_i18n::i18n!` -- no
# polling, no background work, nothing that touches idle power. The crate's
# *build-time* dependency graph is heavier (`rust-i18n-macro` pulls in
# `ignore`/`ripgrep`-style directory walking to resolve `locales/` at macro-
# expansion time), but that entire subtree lives behind a proc-macro crate
# and is never linked into the produced binary -- only this crate's own
# compile time is affected, not the shipped app. A self-rolled `LocaleTable`
# would avoid that build-time cost but would mean hand-writing the exact
# fallback/interpolation/key-flattening machinery `t!()` already provides,
# for ~90 keys across two languages -- judged not worth reinventing here.
rust-i18n = "4"

# OS locale detection for the settings screen's "自動" language option
# (`crate::i18n::detect_os_locale`) -- a `sys_locale::get_locale()` call at
# startup (and again whenever the user picks "自動"), each just one syscall/
# API call, not polled. Minimal dependency footprint (no transitive deps on
# any platform this project targets -- macOS/Linux/Windows), matching this
# crate's general "keep deps lean" posture.
sys-locale = "0.3"

# Swift-app importer wave (`crate::swift_import`): tests hand-author a
# scratch "GRDB-shaped" `labolabo.db` (same technique
# `labolabo-core`'s own `swift_import` tests use) to exercise `swift_import::
# run` end-to-end without a real Swift install. Test-only -- production code
# only ever calls `labolabo_core::import_from_swift`, which owns the real
# rusqlite read path. Version/features match `labolabo-core`'s own
# dependency to keep one resolved version in the workspace lockfile.
[dev-dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"] }

# i18n wave (`tests/i18n_parity.rs`): the ja/en key-parity gate parses
# `locales/{ja,en}.yml` directly (the same files `rust_i18n::i18n!` embeds
# at compile time -- rust-i18n exposes no public "enumerate all keys" API,
# so the test reads the source of truth itself). Same version rust-i18n's
# own macro crate already resolves in this lockfile, so this adds no new
# dependency version; test-only, never linked into the shipped binary.
serde_yaml = "0.9"
