[package]
name = "labolabo-core"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Pure-logic core (git porcelain v2 / unified diff parsers, commit graph layout, worktree list / transcript usage / agent hook-event parsers, cross-session conflicts, release version compare, tiling/tab tree model) plus session/appState SQLite persistence (store), ported from LaboLaboEngine / the app's PaneTilingModel / LaboLaboStore (Swift), verified against them via golden-file tests."

# serde_json is a *runtime* dependency starting wave 2: TranscriptUsage
# (JSONL usage aggregation) and AgentEventParser (hook-event JSON) need real
# JSON parsing to faithfully reproduce Foundation's `JSONSerialization` +
# `as? T` bridging behavior (see `transcript_usage.rs`'s `as_int` doc comment
# for the NSNumber-bridging quirk this preserves). Wave 1's parsers
# (porcelain / unified diff) still need none of it themselves.
#
# serde's `derive` feature becomes a *runtime* dependency starting wave 3:
# `tiling::TileLayout`/`PanePayload` are the actual persisted-JSON DTOs (GRDB
# `appState.paneLayout` column, mirroring the app's `SessionStore.encodeLayout`
# / `decodeLayout`), so `#[derive(Serialize, Deserialize)]` on them has to
# live in the library, not behind a dev-dependency.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# rusqlite (`bundled` feature -- SQLite compiled in, no system library
# dependency) and chrono become runtime dependencies starting wave 4c:
# `store::SessionDatabase` is real SQLite persistence (a faithful port of
# `SessionDatabase.swift`, which uses GRDB), not a pure parser. `chrono`
# (`default-features = false, features = ["std"]` -- no "clock"/"wasmbind",
# since nothing here calls `Utc::now()`) backs `SessionRecord::added_at`;
# `store::datetime` hand-rolls both directions of GRDB's `Date` <-> TEXT
# format rather than using rusqlite's own `chrono` feature, to keep full
# control over exact byte-for-byte compatibility with GRDB's `DateFormatter`
# output.
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }

# Wave 4b: `hooks::UnixSocketEventTransport::stop()` needs `shutdown(2)` on a
# raw fd (to unblock the accept-loop thread's blocking `accept()` call from
# another thread) -- std's `UnixListener` exposes no such method. Unix-only
# target dependency since the AF_UNIX transport itself is `#[cfg(unix)]`
# (Windows gets its own transport in a future wave, see `hooks.rs`).
[target.'cfg(unix)'.dependencies]
libc = "0.2"
