[package]
name = "labolabo-core"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Pure-logic core (git porcelain v2 / unified diff parsers, commit graph layout, worktree list / transcript usage / agent hook-event parsers, cross-session conflicts, release version compare, tiling/tab tree model) plus session/appState SQLite persistence (store), ported from LaboLaboEngine / the app's PaneTilingModel / LaboLaboStore (Swift), verified against them via golden-file tests."

# serde_json is a *runtime* dependency starting wave 2: TranscriptUsage
# (JSONL usage aggregation) and AgentEventParser (hook-event JSON) need real
# JSON parsing to faithfully reproduce Foundation's `JSONSerialization` +
# `as? T` bridging behavior (see `transcript_usage.rs`'s `as_int` doc comment
# for the NSNumber-bridging quirk this preserves). Wave 1's parsers
# (porcelain / unified diff) still need none of it themselves.
#
# serde's `derive` feature becomes a *runtime* dependency starting wave 3:
# `tiling::TileLayout`/`PanePayload` are the actual persisted-JSON DTOs (GRDB
# `appState.paneLayout` column, mirroring the app's `SessionStore.encodeLayout`
# / `decodeLayout`), so `#[derive(Serialize, Deserialize)]` on them has to
# live in the library, not behind a dev-dependency.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# rusqlite (`bundled` feature -- SQLite compiled in, no system library
# dependency) and chrono become runtime dependencies starting wave 4c:
# `store::SessionDatabase` is real SQLite persistence (a faithful port of
# `SessionDatabase.swift`, which uses GRDB), not a pure parser. `chrono`
# (`default-features = false, features = ["std"]`, no "wasmbind" -- this
# crate never targets wasm) backs `SessionRecord::added_at`; `store::
# datetime` hand-rolls both directions of GRDB's `Date` <-> TEXT format
# rather than using rusqlite's own `chrono` feature, to keep full control
# over exact byte-for-byte compatibility with GRDB's `DateFormatter` output.
# The `"clock"` feature (`Utc::now()`) is on starting wave 5b-3: `store::
# task_record::Task::new_*` stamps `created_at`/`last_active_at` at Task-
# creation time -- unlike `SessionRecord::added_at` (always caller-supplied,
# since Swift's `SessionRecord` has no Rust-side notion of "now" to begin
# with), a freshly created `Task` needs a real wall-clock timestamp.
chrono = { version = "0.4.45", default-features = false, features = ["std", "clock"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }

# Wave 5b-3: `store::task_record::Task::new_*` mints a UUID v4 per Task
# (`plans/012-task-model-and-control-cli.md` §1's `id: UUID`) -- `v4` is the
# only feature needed (random IDs, no MAC-address/timestamp-based variants).
uuid = { version = "1", features = ["v4"] }

# Wave 5h (Git pane): `file_watcher::FileWatcher` -- a cross-platform port of
# `Sources/LaboLaboEngine/Git/FileWatcher.swift` (macOS-only FSEvents). This
# crate has no async runtime (see `process.rs`'s module doc comment) and no
# existing OS-notification primitive, so a new runtime dependency is
# unavoidable to cover Linux/Windows too -- `notify` is the de facto
# standard for this in the Rust ecosystem (FSEvents on macOS, inotify on
# Linux, ReadDirectoryChangesW on Windows behind one API), which is exactly
# the cross-platform (including the `rust` CI job's `windows-latest` leg)
# requirement this wave's brief calls for. Default features only -- no
# crossbeam-channel/kqueue/serde features, since `file_watcher.rs` only
# needs the plain `std::sync::mpsc`-based watch API.
notify = "8"

# Wave 4b: `hooks::UnixSocketEventTransport::stop()` needs `shutdown(2)` on a
# raw fd (to unblock the accept-loop thread's blocking `accept()` call from
# another thread) -- std's `UnixListener` exposes no such method. Unix-only
# target dependency since the AF_UNIX transport itself is `#[cfg(unix)]`
# (Windows has its own Named Pipe transport -- see the cfg(windows) block
# below).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows core wave (feature/rust-core-windows): the Named Pipe transports
# for hooks (`hooks::NamedPipeEventTransport`, docs/hooks-protocol.md §4.2)
# and control (`control::ControlServer`/`send_control_request`,
# docs/control-protocol.md §9), plus the same-user pipe ACL
# (`windows_pipe_security`).
#
# - `interprocess` (default features -- explicitly **no** `tokio`/`async`;
#   this crate stays sync + async-runtime-free, see `process.rs`'s module
#   doc comment): the sync Named Pipe listener/stream layer. Chosen over
#   raw `windows-sys` calls for the transport itself because it already
#   implements the non-obvious parts a hand-rolled ConnectNamedPipe loop
#   gets wrong: dead-on-arrival connection cleanup in `accept()`
#   (ERROR_NO_DATA -> DisconnectNamedPipe -> retry), EOF thunking
#   (ERROR_BROKEN_PIPE/ERROR_PIPE_NOT_CONNECTED -> `Ok(0)`, so
#   `read_to_end` terminates the way a Unix-socket EOF does),
#   ERROR_MORE_DATA message reassembly, and flush-before-close on drop
#   (its "limbo" mechanism) so a response written right before closing
#   isn't discarded.
# - `recvmsg`: the message-receive types (`MsgBuf`/`RecvMsg`/`RecvResult`)
#   `interprocess`'s message-mode pipe streams implement but do not
#   re-export; needed for the control transport's one-message-per-direction
#   framing (docs/control-protocol.md §9). Tiny crate, already a transitive
#   dependency of `interprocess` itself.
# - `widestring`: `U16CString` for `SecurityDescriptor::deserialize`'s SDDL
#   input (also already transitive via `interprocess`).
# - `windows-sys`: current-user SID lookup (OpenProcessToken /
#   GetTokenInformation / ConvertSidToStringSidW) for the same-user DACL --
#   `interprocess` exposes no "current user" helper. Version matches
#   `interprocess`'s own windows-sys dependency (one resolved copy).
[target.'cfg(windows)'.dependencies]
interprocess = "2.4"
recvmsg = "1"
widestring = "1"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
] }
